--- a/apps/server/templates/server/base.html
+++ b/apps/server/templates/server/base.html
@@ -9,7 +9,7 @@
       </head>
       <body>
             <!--네비게이션 바 작성-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
                   <div class="container">
                       <a class="navbar-brand " href="http://127.0.0.1:5000/knockx2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-webcam" viewBox="0 0 16 16">
@@ -24,6 +24,25 @@
                   </a>
 
                         <a class="navbar-brand " href="http://127.0.0.1:5000/knockx2/live">Live</a>
+
+                        <!--사용자명, 로그아웃 / 신규등록, 로그아웃-->
+                        <ul class="navbar-nav">
+                              {% if current_user.is_authenticated %}
+                              <li class="nav-item">
+                                    <span class="nav-link">{{ current_user.username }}</span> 
+                              </li>
+                              <li class="nav-item">
+                                    <a class="nav-link" href="{{  url_for('auth.logout')  }}" >로그아웃</a>
+                              </li>
+                              {% else %}
+                              <li class="nav-item">
+                                    <a class="nav-link" href="{{  url_for('auth.login')  }}">로그인</a>
+                              </il>
+                              <li class="nav-item">
+                                    <a class="nav-link" href="{{  url_for('auth.signup')  }}">회원가입</a>
+                              </il>
+                              {% endif %}
+                        </ul>
                   </div>
             </nav>
                   
