--- a/apps/auth/templates/auth/login.html
+++ b/apps/auth/templates/auth/login.html
@@ -32,7 +32,7 @@
       </div>
 
 
-      {{ form.submit(class="btn btn-md btn-primary btn-block dt-auth-btn") }}
+      {{ form.submit(class="btn btn-md btn-dark btn-block dt-auth-btn") }}
 </form>
 </section>
 </div>
