--- a/apps/auth/templates/auth/signup.html
+++ b/apps/auth/templates/auth/signup.html
@@ -57,7 +57,7 @@
         <!-- <span style="color: red">{{ error }}</span> -->
         {% endfor %}
     </div>
-      {{ form.submit(class="btn btn-md btn-primary btn-block dt-auth-btn") }}
+      {{ form.submit(class="btn btn-md btn-dark btn-block dt-auth-btn") }}
     </form>
 </section>
 </div>
