--- a/apps/server/templates/server/index.html
+++ b/apps/server/templates/server/index.html
@@ -14,7 +14,9 @@
 
     <!--스트리밍 카드-->
   <div class="card" style="width: 18rem;">
-    <img src="{{ url_for('streaming.video') }}" class="card-img-top" alt="video">
+    <!-- <img src="" class="card-img-top" alt="video" -->
+    <!-- onerror="this.onerror.null; this.src='https://image-resource.creatie.ai/154479689743720/154479689743722/f2aaadb0b3b66ae169b19504f5595b53.jpg'"> -->
+    <img src="{{ url_for('streaming.video') }}" class="card-img-top" alt="video" >
     <div class="card-body">
       <h5 class="card-title">Streaming</h5>
       <p class="card-text">Streaming</p>
