--- a/apps/server/templates/server/index.html
+++ b/apps/server/templates/server/index.html
@@ -8,7 +8,9 @@
       <div class="card-body">
         <h5 class="card-title">Streaming_Test</h5>
         <p class="card-text">웹캠을 이용한 스트리밍 테스트</p>
+        <div class="btn_position">
         <a href="http://127.0.0.1:5000/knockx2/live_test" class="btn btn-dark">보기</a>
+      </div>
       </div>
     </div>
 
@@ -20,8 +22,14 @@
     <div class="card-body">
       <h5 class="card-title">Streaming</h5>
       <p class="card-text">Streaming</p>
+      <div class="btn_position">
       <a href="http://127.0.0.1:5000/knockx2/live" class="btn btn-dark">보기</a>
+    </div>
     </div>
   </div>
 </div>
+
+
+
+
 {% endblock %}
