--- a/apps/auth/templates/auth/signup.html
+++ b/apps/auth/templates/auth/signup.html
@@ -1,80 +1,113 @@
 {% extends "server/base.html" %}
-{% block title %}사용자 신규 등록{% endblock %}
+{% block title %}회원가입{% endblock %}
 {% block content %}
 <div class="mx-auto dt-auth-main">
-      <div class="card dt-auth-signup">
-            <header>사용자 신규 등록</header>
-            <section>
-<form
-      action="{{ url_for('auth.signup', next=request.args.get('next')) }}"
-      method="POST"
-      novalidate="novalidate"
-      class="form-signin"
->
-{{ form.csrf_token }}
-      {% for message in get_flashed_messages() %}
-      <div class="dt-auth-flash">{{ message }}</div>
-      {% endfor %}
-    <div class="form-floating">
-        {{ form.user_name(size=30, class="form-control dt-auth-input", placeholder="사용자명") }}
-        <label for="floatingName">성명</label>
-       {% for error in form.user_name.errors %}
-       <span style="color: red">{{ error }}</span>
-       {% endfor %}
+    <div class="card dt-auth-signup">
+        <header>회원가입</header>
+        <section>
+            <form action="{{ url_for('auth.signup', next=request.args.get('next')) }}"
+                  method="POST"
+                  novalidate="novalidate"
+                  class="form-signin">
+                {{ form.csrf_token }}
+                {% for message in get_flashed_messages() %}
+                <div class="dt-auth-flash">{{ message }}</div>
+                {% endfor %}
+
+                <div class="form-floating">
+                    <input type="text" class="form-control dt-auth-input {% if form.user_name.errors %}is-invalid{% elif form.user_name.data %}is-valid{% endif %}"
+                           id="floatingUsername" name="user_name" value="{{ form.user_name.data or ''}}" placeholder="">
+                    <label for="floatingUsername">이름</label>
+                    {% if form.user_name.errors %}
+                        <div class="invalid-feedback">
+                            {{ form.user_name.errors[0] }}
+                        </div>
+                    {% elif form.user_name.data %}
+                        <div class="valid-feedback">
+                            사용 가능한 이름입니다.
+                        </div>
+                    {% endif %}
+                </div>
+                
+                <div class="form-floating">
+                    <input type="email" class="form-control dt-auth-input {% if form.email.errors %}is-invalid{% elif form.email.data %}is-valid{% endif %}" 
+                           id="floatingEmail" name="email" value="{{ form.email.data or ''}}" placeholder="">
+                    <label for="floatingEmail">이메일</label>
+                    {% if form.email.errors %}
+                        <div class="invalid-feedback">
+                            {{ form.email.errors[0] }}
+                        </div>
+                    {% elif form.email.data %}
+                        <div class="valid-feedback">
+                            사용 가능한 이메일입니다.
+                        </div>
+                    {% endif %}
+                </div>
+                
+                <div class="form-floating">
+                    <input type="password" class="form-control dt-auth-input {% if form.password.errors %}is-invalid{% elif form.password.data %}is-valid{% endif %}" 
+                           id="floatingPassword" name="password" placeholder="">
+                    <label for="floatingPassword">비밀번호</label>
+                    {% if form.password.errors %}
+                        <div class="invalid-feedback">
+                            {{ form.password.errors[0] }}
+                        </div>
+                    {% elif form.password.data %}
+                        <div class="valid-feedback">
+                        </div>
+                    {% endif %}
+                </div>
+                
+                <div class="form-floating">
+                    <input type="text" class="form-control dt-auth-input {% if form.phone_number.errors %}is-invalid{% elif form.phone_number.data %}is-valid{% endif %}" 
+                           id="phone_number" name="phone_number" value="{{ form.phone_number.data or '' }}" placeholder="000-0000-0000">
+                    <label for="phone_number">전화번호</label>
+                    {% if form.phone_number.errors %}
+                        <div class="invalid-feedback">
+                            {{ form.phone_number.errors[0] }}
+                        </div>
+                    {% elif form.phone_number.data %}
+                        <div class="valid-feedback">
+                            사용 가능한 전화번호입니다.
+                        </div>
+                    {% endif %}
+                </div>
+                
+                <div class="form-floating">
+                    <input type="text" class="form-control dt-auth-input {% if form.birth_date.errors %}is-invalid{% elif form.birth_date.data %}is-valid{% endif %}" 
+                           id="birth_date" name="birth_date" value="{{ form.birth_date.data or '' }}" placeholder="YYYY-MM-DD">
+                    <label for="birth_date">생년월일</label>
+                    {% if form.birth_date.errors %}
+                        <div class="invalid-feedback">
+                            {{ form.birth_date.errors[0] }}
+                        </div>
+                    {% elif form.birth_date.data %}
+                        <div class="valid-feedback">
+                        </div>
+                    {% endif %}
+                </div>
+                
+
+                <div class="btn_position">
+                    <button type="submit" class="btn btn-md btn-dark btn-block dt-auth-btn">가입하기</button>
+                </div>
+            </form>
+        </section>
     </div>
-    <div class="form-floating">
-        {{ form.email(class="form-control dt-auth-input", placeholder="메일 주소") }}
-        <label for="floatingEmail">이메일</label>
-       {% for error in form.email.errors %}
-       <span style="color: red">{{ error }}</span>
-       {% endfor %}
-    </div>
-    <div class="form-floating">
-        {{ form.password(class="form-control dt-auth-input", placeholder="비밀번호") }}
-        <label for="floatingPassword">비밀번호</label>
-       {% for error in form.password.errors %}
-       <span style="color: red">{{ error }}</span>
-       {% endfor %}
-    </div>
-    <div class="form-floating">
-        {{ form.device_id(class="form-control dt-auth-input", placeholder="장치 식별 번호") }}
-        <label for="floatingDeviceId">장치 식별 번호</label>
-        {% for error in form.device_id.errors %}
-        <span style="color: red">{{ error }}</span>
-        {% endfor %}
-    </div>
-    <div class="form-floating">
-        {{ form.birth_date(class="form-control dt-auth-input", placeholder="YYYY-MM-DD") }}
-        <label for="floatingBirthDate">생년월일(YYYY-MM-DD)</label>
-        {% for error in form.birth_date.errors %}
-        <!-- <span style="color: red">{{ error }}</span> -->
-        {% endfor %}
-    </div>
-    <div class="form-floating">
-        {{ form.phone_number(class="form-control dt-auth-input", id="phone_number", placeholder="000-0000-0000") }}
-        <label for="floatingPhoneNumber">전화번호(000-0000-0000)</label>
-        {% for error in form.phone_number.errors %}
-        <!-- <span style="color: red">{{ error }}</span> -->
-        {% endfor %}
-    </div>
-      {{ form.submit(class="btn btn-md btn-dark btn-block dt-auth-btn") }}
-    </form>
-</section>
-</div>
 </div>
 
 <script>
-      function formatPhoneNumber(input) {
-          let value = input.value.replace(/\D/g, ''); // 숫자만 남기기
-          if (value.length > 3 && value.length <= 7) {
-              input.value = value.slice(0, 3) + '-' + value.slice(3);
-          } else if (value.length > 7) {
-              input.value = value.slice(0, 3) + '-' + value.slice(3, 7) + '-' + value.slice(7, 11);
-          } else {
-              input.value = value;
-          }
-      }
-      function formatBirthDate(input) {
+    function formatPhoneNumber(input) {
+        let value = input.value.replace(/\D/g, ''); // 숫자만 남기기
+        if (value.length > 3 && value.length <= 7) {
+            input.value = value.slice(0, 3) + '-' + value.slice(3);
+        } else if (value.length > 7) {
+            input.value = value.slice(0, 3) + '-' + value.slice(3, 7) + '-' + value.slice(7, 11);
+        } else {
+            input.value = value;
+        }
+    }
+    function formatBirthDate(input) {
         let value = input.value.replace(/\D/g, ''); // 숫자만 남기기
         if (value.length > 4 && value.length <= 6) {
             input.value = value.slice(0, 4) + '-' + value.slice(4); // YYYY-MM
@@ -85,15 +118,12 @@
         }
     }
 
-      // 전화번호 입력 필드에 이벤트 리스너 추가
-      document.getElementById("phone_number").addEventListener("input", function () {
-          formatPhoneNumber(this);
-      });
+    document.getElementById("phone_number").addEventListener("input", function () {
+        formatPhoneNumber(this);
+    });
 
-      // 생년월일 입력 필드에 이벤트 리스너 추가
-      document.getElementById("birth_date").addEventListener("input", function () {
-            formatBirthDate(this);
-      });
-
+    document.getElementById("birth_date").addEventListener("input", function () {
+        formatBirthDate(this);
+    });
 </script>
 {% endblock %}
