--- a/apps/server/templates/server/base.html
+++ b/apps/server/templates/server/base.html
@@ -11,7 +11,8 @@
             <!--네비게이션 바 작성-->
             <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
                   <div class="container">
-                      <a class="navbar-brand " href="http://127.0.0.1:5000/knockx2">
+                        {% if current_user.is_authenticated %}
+                        <a class="navbar-brand " href="http://127.0.0.1:5000/knockx2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-webcam" viewBox="0 0 16 16">
                         <path d="M0 6a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H9.269c.144.162.33.324.531.475a7 7 0 0 0 .907.57l.014.006.003.002A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.224-.947l.003-.002.014-.007a5 5 0 0 0 .268-.148 7 7 0 0 0 .639-.421c.2-.15.387-.313.531-.475H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1z"/>
                         <path d="M8 6.5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m7 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0"/>
@@ -20,15 +21,26 @@
                         <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1"/>
                         <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117M11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5M4 1.934V15h6V1.077z"/>
                         </svg>
-                        <p class="knockx2">Knockx2</p>          
+                        <p class="knockx2">Knockx2</p>
+                        {% else %} 
+                        <a class="navbar-brand " href="http://127.0.0.1:5000/knockx2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-webcam log-out" viewBox="0 0 16 16">
+                              <path d="M0 6a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H9.269c.144.162.33.324.531.475a7 7 0 0 0 .907.57l.014.006.003.002A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.224-.947l.003-.002.014-.007a5 5 0 0 0 .268-.148 7 7 0 0 0 .639-.421c.2-.15.387-.313.531-.475H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1z"/>
+                              <path d="M8 6.5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m7 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0"/>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-door-open log-out" viewBox="0 0 16 16">
+                              <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3zm1 13h8V2H4z"/>
+                              <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0"/>
+                        </svg>
+                        <p class="knockx2">Knockx2</p>
+                        {% endif %}
                   </a>
-
 
                         <!--사용자명, 로그아웃 / 신규등록, 로그아웃-->
                         <ul class="navbar-nav">
                               {% if current_user.is_authenticated %}
                               <li class="nav-item">
-                                    <span class="nav-link">{{ current_user.username }}</span> 
+                                    <a class="nav-link" href="{{  url_for('auth.info', user_id=current_user.id)  }}" >{{ current_user.user_name }}</a>
                               </li>
                               <li class="nav-item">
                                     <a class="nav-link" href="{{  url_for('auth.logout')  }}" >로그아웃</a>
