사용자가 가진 디바이스 정보 및 IP 주소를 불러와 스트리밍
개선할 점
 - 등록된 기기 없다면 어떻게 할 지 정해야함.

--- a/apps/server/templates/server/home.html
+++ b/apps/server/templates/server/home.html
@@ -3,11 +3,13 @@
 {% block content %}
 
 {% if current_user.is_authenticated %}
-<div class="d-flex justify-content-around gap-3" style="margin-top: 16px;">
 
+<div class="d-flex justify-content-around gap-3" style="margin-top: 16px;">
     <!--스트리밍 카드-->
   <div class="card" style="width: 18rem;">
-    <img src="{{ url_for('streaming.video') }}" class="card-img-top" alt="video" >
+    <img src="{{ url_for('streaming.video') }}" class="card-img-top" alt="video" 
+    onerror="this.onerror=null; this.src = '../static/images/smart.jpg';"
+    />
     <div class="card-body">
       <h5 class="card-title">Streaming</h5>
       <p class="card-text">Streaming</p>
