--- a/apps/auth/templates/auth/update.html
+++ b/apps/auth/templates/auth/update.html
@@ -1,8 +1,10 @@
 {% extends "server/base.html" %}
   {% block content %}
-<div class="mx-auto dt-auth-main">
-<div class="card dt-auth">
-<header>회원 정보 수정</header>
+  <div class="relative flex h-[600px] bg-gray-100">
+
+    <div class="absolute inset-0 flex items-center justify-end pr-24">
+      <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
+        <h2 class="text-2xl font-bold mb-6 text-center">회원 정보 수정</h2>
 <section>
     <form
     action="{{ url_for('auth.update', user_id=current_user.id) }}"
@@ -16,7 +18,7 @@
     {% endfor %}
     
     <div class="form-floating">
-        <input type="text" class="form-control dt-auth-input {% if form.user_name.errors %}is-invalid{% elif form.user_name.data %}is-valid{% endif %}" 
+        <input type="text" class="form-control dt-auth-input {% if form.user_name.errors %}is-invalid{% elif form.user_name.data %}is-valid{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" 
                id="floatingUsername" name="user_name" value="{{ current_user.user_name }}">
         <label for="floatingUsername">이름</label>
         {% if form.user_name.errors %}
@@ -30,13 +32,13 @@
     </div>
 
 <div class="form-floating">
-        <input type="email" class="form-control dt-auth-input" 
+        <input type="email" class="form-control dt-auth-input  w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" 
         name="email" value="{{ current_user.email }}" style="background-color: #e9ecef" disabled>
         <label for="floatingEmail">이메일</label>
             </div>
     
                 <div class="form-floating">
-                    <input type="text" class="form-control dt-auth-input {% if form.phone_number.errors %}is-invalid{% elif form.phone_number.data %}is-valid{% endif %}" 
+                    <input type="text" class="form-control dt-auth-input {% if form.phone_number.errors %}is-invalid{% elif form.phone_number.data %}is-valid{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" 
                            id="phone_number" name="phone_number" value="{{ current_user.phone_number if current_user.phone_number is not none }}" placeholder="000-0000-0000">
                     <label for="phone_number">전화번호</label>
                     {% if form.phone_number.errors %}
@@ -50,7 +52,7 @@
                 </div>
     
                 <div class="form-floating">
-                    <input type="text" class="form-control dt-auth-input {% if form.birth_date.errors %}is-invalid{% elif form.birth_date.data %}is-valid{% endif %}" 
+                    <input type="text" class="form-control dt-auth-input {% if form.birth_date.errors %}is-invalid{% elif form.birth_date.data %}is-valid{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" 
                            id="birth_date" name="birth_date" value="{{ current_user.birth_date if current_user.birth_date is not none }}" placeholder="YYYY-MM-DD">
                     <label for="birth_date">생년월일</label>
                     {% if form.birth_date.errors %}
@@ -64,11 +66,16 @@
                 </div>
     
     
-    <div class="btn_position">
-        {{ form.submit(class="btn btn-md btn-dark btn-block dt-auth-btn") }}
-    </div>
+                <button
+                type="submit"
+                class="w-full bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors"
+                style="margin-top: 10px;"
+              >
+                수정
+              </button>
 </form>
 </section>
+</div>
 </div>
 </div>
 
