--- a/apps/auth/templates/auth/register_device.html
+++ b/apps/auth/templates/auth/register_device.html
@@ -1,9 +1,11 @@
 {% extends "server/base.html" %}
 {% block title %}기기 등록{% endblock %}
 {% block content %}
-<div class="mx-auto dt-auth-main">
-<div class="card dt-auth">
-<header>기기 등록</header>
+<div class="relative flex h-[600px] bg-gray-100">
+
+    <div class="absolute inset-0 flex items-center justify-end pr-24">
+      <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
+        <h2 class="text-2xl font-bold mb-6 text-center">기기 등록</h2>
 <section>
 <form action="{{ url_for('auth.register_device', user_id=current_user.id) }}"
         method="POST"
@@ -20,7 +22,7 @@
             <div class="device-entry">
                 <div class="form-floating">
                     <input type="text"
-                            class="form-control dt-auth-input {% if device_form.device_id.errors %}is-invalid{% elif device_form.device_id.data %}is-valid{% endif %}"
+                            class="form-control dt-auth-input {% if device_form.device_id.errors %}is-invalid{% elif device_form.device_id.data %}is-valid{% endif %}  w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
                             id="{{ device_form.device_id.id }}"
                             name="{{ device_form.device_id.name }}"
                             placeholder="일련번호"
@@ -32,9 +34,23 @@
                         </div>
                     {% endif %}
                 </div>
+                <div class="form-floating">
+                    <input type="text"
+                            class="form-control dt-auth-input {% if device_form.device_name.errors %}is-invalid{% elif device_form.device_name.data %}is-valid{% endif %}  w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
+                            id="{{ device_form.device_name.id }}"
+                            name="{{ device_form.device_name.name }}"
+                            placeholder="일련번호"
+                            value="{{ device_form.device_name.data or '' }}">
+                    <label for="{{ device_form.device_name.id }}">기기 별명</label>
+                    {% if device_form.device_name.errors %}
+                        <div class="invalid-feedback">
+                            {{ device_form.device_name.errors[0] }}
+                        </div>
+                    {% endif %}
+                </div>
                 <div class="form-floating ip-container">
                     <input type="text"
-                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_1.errors %}is-invalid-device{% elif device_form.ip_address_1.data %}is-valid-device{% endif %}"
+                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_1.errors %}is-invalid-device{% elif device_form.ip_address_1.data %}is-valid-device{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
                             maxlength="3"
                             id="{{ device_form.ip_address_1.id }}"
                             name="{{ device_form.ip_address_1.name }}"
@@ -42,7 +58,7 @@
                             value="{{ device_form.ip_address_1.data or '' }}">
                     <span>.</span>
                     <input type="text"
-                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_2.errors %}is-invalid-device{% elif device_form.ip_address_2.data %}is-valid-device{% endif %}"
+                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_2.errors %}is-invalid-device{% elif device_form.ip_address_2.data %}is-valid-device{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
                             maxlength="3"
                             id="{{ device_form.ip_address_2.id }}"
                             name="{{ device_form.ip_address_2.name }}"
@@ -50,7 +66,7 @@
                             value="{{ device_form.ip_address_2.data or '' }}">
                     <span>.</span>
                     <input type="text"
-                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_3.errors %}is-invalid-device{% elif device_form.ip_address_3.data %}is-valid-device{% endif %}"
+                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_3.errors %}is-invalid-device{% elif device_form.ip_address_3.data %}is-valid-device{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
                             maxlength="3"
                             id="{{ device_form.ip_address_3.id }}"
                             name="{{ device_form.ip_address_3.name }}"
@@ -58,7 +74,7 @@
                             value="{{ device_form.ip_address_3.data or '' }}">
                     <span>.</span>
                     <input type="text"
-                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_4.errors %}is-invalid-device{% elif device_form.ip_address_4.data %}is-valid-device{% endif %}"
+                            class="form-control dt-auth-input ip-segment {% if device_form.ip_address_4.errors %}is-invalid-device{% elif device_form.ip_address_4.data %}is-valid-device{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
                             maxlength="3"
                             id="{{ device_form.ip_address_4.id }}"
                             name="{{ device_form.ip_address_4.name }}"
@@ -89,27 +105,35 @@
 
     <div class="btn_position">
         {% if device_count <= 1 %}
-        <button type="button" name="delete_device" class="btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px;" disabled>삭제</button>
+        <button type="button" name="delete_device" class=" btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px; max-height: 40px; min-width: 56px;" disabled>삭제</button>
         {% else %}
-        <button type="submit" name="delete_device" class="btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px;" >삭제</button>
+        <button type="submit" name="delete_device" class=" btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px; max-height: 40px; min-width: 56px;" >삭제</button>
         {% endif %}
 
         {% if form.devices|length >= 3 %}
-            <button type="button" name="add_device" class="btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px;" disabled>추가</button>
+            <button type="button" name="add_device" class=" btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px; max-height: 40px; min-width: 56px;" disabled>추가</button>
         {% else %}
-            <button type="submit" name="add_device" class="btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px;">추가</button>
+            <button type="submit" name="add_device" class=" btn btn-md btn-dark btn-block dt-auth-btn" style="margin-right: 10px; max-height: 40px; min-width: 56px;">추가</button>
         {% endif %}
 
-        {{ form.submit(class="btn btn-md btn-dark btn-block dt-auth-btn") }}
+        <button
+        type="submit"
+        class="dt-auth-btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors"
+        style="margin-top: 10px; height: auto; max-height: 40px; width: 200px;"
+      >
+        등록
+      </button>
     </div>
+
 </form>
 </section>
+</div>
 </div>
 </div>
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
-    // ✅ 일련번호 자동 "-" 추가
+    // 일련번호 자동 "-" 추가
     document.querySelectorAll("input[name$='device_id']").forEach(input => {
         input.addEventListener("input", function (event) {
             let cursorPos = this.selectionStart;
