--- a/apps/server/static/css/style.css
+++ b/apps/server/static/css/style.css
@@ -42,7 +42,7 @@ input[type="search"] {
 }
 .dt-auth-btn {
     display: block;
-    margin: 30px 0 0 0;
+    margin: 10px 0 0 0;
 }
 .dt-search {
     height: 28px !important;
@@ -131,7 +131,7 @@ color: #EEEEEE
 }
 
 .is-invalid-device {
-    border-color: #bf3644 !important;
+    border-color: rgb(191, 54, 68) !important;
     background-repeat: no-repeat;
     background-position: right 10px center;
     background-size: 18px;
@@ -179,4 +179,15 @@ color: #EEEEEE
     font-weight: bold;
     padding-top:  19px;
     line-height: 50px; /* 입력칸 높이에 맞춰 정렬 */
+}
+
+.form-floating input {
+    height: 3.5rem !important; /* Bootstrap 기본 높이보다 조금 더 크게 설정 */
+    padding-top: 1.5rem !important; /* 레이블과 겹치지 않게 조정 */
+    font-size: 1rem !important; /* 폰트 크기 조정 */
+}
+
+.form-floating label {
+    font-size: 0.875rem !important; /* 레이블 크기 조정 */
+    padding: 1 !important;
 }
