--- a/apps/server/templates/server/home.html
+++ b/apps/server/templates/server/home.html
@@ -5,30 +5,48 @@
 {% if current_user.is_authenticated %}
 
 <div class="d-flex justify-content-around gap-3" style="margin-top: 16px;">
+  {% if cameras %}
+  {% for camera in cameras %}
     <!--스트리밍 카드-->
   <div class="card" style="width: 18rem;">
-    <img src="{{ url_for('streaming.video') }}" class="card-img-top" alt="video" 
-    onerror="this.onerror=null; this.src = '../static/images/smart.jpg';"
-    />
+    <img src="{{ url_for('streaming.video', camera_id=camera.camera_id) }}" 
+      class="card-img-top" alt="video" 
+      onerror="this.onerror=null; this.src = '../static/images/no_cam.jpg';"/>
     <div class="card-body">
       <h5 class="card-title">Streaming</h5>
-      <p class="card-text">Streaming</p>
+      <p class="card-text">Device ID: {{ camera.device_id }}</p>
       <div class="btn_position">
-      <a href="http://127.0.0.1:5000/knockx2/live" class="btn btn-dark">보기</a>
+      <a href="{{ url_for('streaming.yolo_video', camera_id=camera.camera_id) }}" class="dt-auth-btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors"
+      style="text-align: center; width: auth; max-height: 40px; min-width: 56px;">보기</a>
     </div>
     </div>
   </div>
-
+{% endfor %}
+{% else %}
+<div class="d-flex justify-content-around gap-3" style="margin-top: 16px;">
+    <div class="card" style="width: 18rem;">
+        <img   src="../static/images/no_cam1.png" class="card-img-top" alt="no_camera" >
+        <div class="card-body">
+            <h5 class="card-title">Streaming</h5>
+            <p class="card-text">등록된 기기가 없습니다.</p>
+            <div class="btn_position">
+                <a href="{{ url_for('auth.register_device', user_id=current_user.id)}}" class="dt-auth-btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors" 
+                style="text-align: center; width: 90px; max-height: 40px; min-width: 56px;">기기 등록</a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% else %}
 <div class="d-flex justify-content-around gap-3" style="margin-top: 16px;">
     <!--스트리밍 카드-->
     <div class="card" style="width: 18rem;">
-      <img  src="..\static\images\smart.jpg" class="card-img-top" alt="video" >
+      <img  src="../static/images/no_cam1.png" class="card-img-top" alt="video" >
       <div class="card-body">
         <h5 class="card-title">Streaming</h5>
-        <p class="card-text">Streaming</p>
+        <p class="card-text">로그인이 필요한 서비스입니다.</p>
         <div class="btn_position">
-        <a href="{{  url_for('auth.login')  }}" class="btn btn-dark">보기</a>
+        <a href="{{  url_for('auth.login')  }}" class="btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors">로그인</a>
       </div>
       </div>
     </div>
