영상 녹화 및 저장된 영상 웹 재생 기능
* 영상이 녹화는 되지만 db에 add할 수 없는 문제 해결
 - scoped_session을 선언해 db.session을 쓰지 않고 데이터를 직접 넣음
* dll 못 찾는 문제 해결
 - windll 라이브러리 명시적으로 로드

--- a/apps/server/templates/server/home.html
+++ b/apps/server/templates/server/home.html
@@ -58,7 +58,7 @@
 </div>
 {% endif %}
 
-<a href="{{  url_for('streaming.view_videos')  }}" class="btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors">영상 보관</a>
+<a href="{{  url_for('streaming.video_storage')  }}" class="btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors">영상 보관</a>
 
 
 {% endblock %}
